<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/nav_list_menu"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NavListButton1"
        android:text="@string/newVehicle"
        android:textSize="18dp"
            android:fontFamily="@font/roboto_regular"
            android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NavListButton2"
        android:text="@string/serviceRequest"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/roboto_regular"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/NavListButton3"
        android:text="@string/map"
        android:textSize="18dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/roboto_regular"
        />
        <Button
            android:id="@+id/NavListFriendsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_button"
            android:text="@string/FriendsButtonText"
            android:textSize="18dp"
            android:fontFamily="@font/roboto_regular" />

        <Switch
            android:id="@+id/serviceSwitch"
            android:paddingTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/serviceSwitch"
            android:textSize="18dp"/>

        <Button
            android:id="@+id/SignOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_transparent"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/SignOut"
            android:textSize="18dp" />
    </LinearLayout>

</ScrollView>
