<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/nav_list_menu"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cenovnik_usluga_id"
            android:text="@string/Price"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"

            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zahtevi_id"
            android:text="@string/ServiceRequest"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            />
        <Button
            android:id="@+id/sanduce_servis_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/MessageBox"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"/>
        <Button
            android:id="@+id/lista_recenzija_btn_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/Feedbacks"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"/>
        <Button
            android:id="@+id/SignOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SignOut"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"
            android:background="@color/Red"/>


    </LinearLayout>

</ScrollView>
