<android.support.design.widget.CoordinatorLayout android:id="@+id/mapFilter"
    android:layout_width="145dp"
    android:layout_height="170dp"
    android:layout_gravity="top|right"
    android:layout_marginRight="20dp"
    android:layout_marginTop="85dp"
    android:background="@color/background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <CheckBox
            android:id="@+id/friendsMarkers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friendsServices" />

        <CheckBox
            android:id="@+id/friendsThumbnails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/showFriends" />
        <CheckBox
            android:id="@+id/radiusFilterEnabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/enableRadius" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/radius" />
            <EditText
                android:id="@+id/radiusFilter"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:inputType="number"
                />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>